--- a/client/package.json
+++ b/client/package.json
@@ -3,32 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
-    "formik": "^2.2.6",
-    "moment": "^2.29.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.5.2",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.9",
+    "@mui/material": "^5.11.10",
+    "axios": "^1.3.3",
+    "bootstrap": "^5.2.3",
+    "formik": "^2.2.9",
+    "moment": "^2.29.4",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-cookies": "^0.1.1",
-    "react-dom": "^17.0.1",
-    "react-moment": "^1.1.1",
-    "react-paypal-button-v2": "^2.6.3",
-    "react-redux": "^7.2.3",
-    "react-router-bootstrap": "^0.25.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
-    "react-toastify": "^7.0.3",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
+    "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
+    "react-redux": "^8.0.5",
+    "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^1.1.1",
-    "yup": "^0.32.9"
+    "web-vitals": "^3.1.1",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
