--- a/client/package.json
+++ b/client/package.json
@@ -52,5 +52,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "compression-webpack-plugin": "^10.0.0"
+  }
 }
